# CPAK2040

./: README.md
code/: CMakeLists.txt  main.c  msc_disk.c  tusb_config.h  usb_descriptors.c
pcb_src/: CPAK2040_r1_PCB.json
stl/: back.stl  button.stl  front.stl
